--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.19.0",
-    "@tpluscode/eslint-config": "^0.2.0",
+    "@tpluscode/eslint-config": "^0.3.0",
     "@types/node": "^14.14.7",
     "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.0",
     "eslint": "^8.0.0",
     "eslint-config-standard": "^16.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
