--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/workflows/setup-env.yaml
       - run: yarn test
       - run: yarn test:queries
@@ -37,6 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
+      - uses: actions/checkout@v2
       - name: Set e2e environment variables
         run: echo -e "\nVUE_APP_E2E=true\nVUE_APP_X_USER=john-doe\nVUE_APP_X_PERMISSION=pipelines:read,pipelines:write" >> .local.env
       - uses: ./.github/workflows/setup-env.yaml
@@ -70,6 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/workflows/setup-env.yaml
       - run: yarn test:cli:transform
       - name: logs on fail
@@ -80,6 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/workflows/setup-env.yaml
       - run: yarn test:cli:publish
       - name: logs on fail
