--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,3 +93,16 @@ jobs:
       - name: logs on fail
         if: ${{ failure() }}
         run: lando logs -s core
+
+  test-import:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/setup-env
+      - run: yarn test:cli:import
+        env:
+          AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
+      - name: logs on fail
+        if: ${{ failure() }}
+        run: lando logs -s core
