--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "c8 -o coverage/apis mocha --recursive apis/**/*.test.ts packages/**/*.test.ts --grep @SPARQL --invert",
     "test:queries": "c8 -o coverage/queries mocha --recursive apis/**/*.test.ts --grep @SPARQL",
     "test:cli": "run-s test:cli:*",
-    "test:cli:rest": "c8 -o coverage/publish mocha --recursive cli/**/*.test.ts --exclude @cube-creator/cli/lib/commands/publish --exclude @cube-creator/cli/lib/commands/transform",
+    "test:cli:rest": "c8 -o coverage/publish mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/* --invert",
+    "test:cli:import": "c8 -o coverage/publish mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/import",
     "test:cli:publish": "c8 -o coverage/publish mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/publish",
     "test:cli:transform": "c8 -o coverage/transform mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/transform",
     "test:e2e": "docker-compose run --rm e2e-tests --",
