--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,7 +79,7 @@ jobs:
           AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
       - name: logs on fail
         if: ${{ failure() }}
-        run: lando logs -s core
+        run: lando logs
 
   test-publish:
     runs-on: ubuntu-latest
@@ -92,7 +92,7 @@ jobs:
           AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
       - name: logs on fail
         if: ${{ failure() }}
-        run: lando logs -s core
+        run: lando logs
 
   test-import:
     runs-on: ubuntu-latest
@@ -105,4 +105,4 @@ jobs:
           AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
       - name: logs on fail
         if: ${{ failure() }}
-        run: lando logs -s core
+        run: lando logs
