--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,6 +80,10 @@ jobs:
       - name: logs on fail
         if: ${{ failure() }}
         run: lando logs
+      - name: Codecov
+        uses: codecov/codecov-action@v1.0.5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   test-publish:
     runs-on: ubuntu-latest
@@ -93,6 +97,10 @@ jobs:
       - name: logs on fail
         if: ${{ failure() }}
         run: lando logs
+      - name: Codecov
+        uses: codecov/codecov-action@v1.0.5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   test-import:
     runs-on: ubuntu-latest
@@ -106,3 +114,7 @@ jobs:
       - name: logs on fail
         if: ${{ failure() }}
         run: lando logs
+      - name: Codecov
+        uses: codecov/codecov-action@v1.0.5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
