--- a/.lando.yml
+++ b/.lando.yml
@@ -37,6 +37,11 @@ services:
         ADMIN_PASSWORD: password
       volumes:
         - ./fuseki/config.ttl:/fuseki/config.ttl
+      healthcheck:
+        test: wget --no-verbose --tries=1 --spider http://localhost:3030/ || exit 1
+        interval: 5s
+        timeout: 3s
+        retries: 10
   trifid:
     type: compose
     app_mount: false
