--- a/.lando.yml
+++ b/.lando.yml
@@ -38,7 +38,7 @@ services:
       volumes:
         - ./fuseki/config.ttl:/fuseki/config.ttl
       healthcheck:
-        test: wget --no-verbose --tries=1 --spider http://localhost:3030/ || exit 1
+        test: wget --no-verbose --tries=1 --spider http://localhost:3030/$$/ping || exit 1
         interval: 5s
         timeout: 3s
         retries: 10
