--- a/.github/workflows/setup-env/action.yml
+++ b/.github/workflows/setup-env/action.yml
@@ -6,16 +6,20 @@ runs:
     - uses: actions/setup-node@v2.4.0
       with:
         node-version: 16
-        cache: 'yarn'
+        cache: "yarn"
     - run: yarn install --ci
       shell: bash
-    - name: setup-docker
-      uses: docker-practice/actions-setup-docker@1.0.4
+    - name: Set up Docker
+      uses: docker-practice/actions-setup-docker@1.0.8
       with:
-        docker_version: 20.10.3
+        docker_version: 20.10.12
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
     - name: Install lando
       run: sh e2e-tests/install-lando.sh
       shell: bash
     - name: Start site
       run: sh e2e-tests/start-lando.sh
       shell: bash
+      env:
+        DOCKER_BUILDKIT: "1"
