--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -12,28 +12,22 @@
     "@cube-creator/model": "0.1.27",
     "@cube-creator/shared-dimensions-api": "3.0.4",
     "@hydrofoil/labyrinth": "^0.4.4",
-    "@rdfine/csvw": "^0.6.3",
-    "@rdfine/hydra": "^0.8.0",
-    "@rdfine/prov": "^0.1.1",
-    "@rdfine/schema": "^0.6.3",
-    "@rdfjs-elements/formats-pretty": "^0.4.3",
-    "@rdfjs/express-handler": "^1.2.1",
-    "@rdfjs/fetch": "^2.1.0",
-    "@rdfjs/namespace": "^1.1.0",
-    "@rdfjs/parser-n3": "^1.1.4",
-    "@rdfjs/term-map": "^1.0.0",
-    "@rdfjs/term-set": "^1.0.1",
+    "@rdfine/csvw": "^0.8.5",
+    "@rdfine/hydra": "^0.10.5",
+    "@rdfine/prov": "^0.3.5",
+    "@rdfine/schema": "^0.8.5",
+    "@rdfjs-elements/formats-pretty": "^0.6.7",
+    "@rdfjs/express-handler": "^2.0.0",
     "@sentry/node": "^6.2.0",
     "@sentry/tracing": "^6.2.0",
-    "@tpluscode/rdf-ns-builders": "^1.0.0",
-    "@tpluscode/rdf-string": "^0.2.23",
-    "@tpluscode/rdfine": "^0.5.43",
-    "@tpluscode/sparql-builder": "^0.3.24",
+    "@tpluscode/rdf-ns-builders": "^4.3.0",
+    "@tpluscode/rdf-string": "^1.1.3",
+    "@tpluscode/rdfine": "^0.7.7",
+    "@tpluscode/sparql-builder": "^1.1.0",
     "@uppy/companion": "^4.1.1",
-    "@zazuko/rdf-vocabularies": ">=2021.3.17",
+    "@zazuko/env": "^2.0.6",
     "aws-sdk": "^2.1361.0",
-    "body-parser": "^1.19.0",
-    "clownface": "^1.0.0",
+    "body-parser": "^1.20.2",
     "commander": "^6.1.0",
     "content-disposition": "^0.5.3",
     "cors": "^2.8.5",
@@ -44,23 +38,22 @@
     "express-conditional-middleware": "^2.1.1",
     "express-jwt": "^8.3.0",
     "express-jwt-permissions": "^1.3.7",
-    "express-rdf-request": "0.1.0",
+    "express-rdf-request": "^2.0.1",
     "get-stream": "^6.0.1",
     "http-errors": "^2.0.0",
     "hydra-box": "^0.6.6",
     "hydra-box-middleware-shacl": "1.1.0",
-    "is-graph-pointer": "^1.3.0",
+    "is-graph-pointer": "^2.1.0",
     "is-stream": "^2",
     "jwks-rsa": "^3.0.0",
     "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
-    "nanoid": "^3.1.16",
+    "nanoid": "^5.0.6",
     "node-fetch": "^2.6.1",
     "once": "^1.4.0",
     "parse-prefer-header": "^1.0.0",
-    "rdf-cube-view-query": "^1.8.2",
-    "rdf-ext": "^1.3.0",
-    "rdf-literal": "^1.3.0",
+    "rdf-cube-view-query": "^2.1.1",
+    "rdf-literal": "^1.3.2",
     "set-link": "^1.0.0",
     "slug": "^5.0.0",
     "sparql-http-client": "^2.2.2",
@@ -77,7 +70,6 @@
     "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
     "@types/chai-snapshot-matcher": "^1.0.0",
-    "@types/clownface": "^1.0.3",
     "@types/commander": "^2.12.2",
     "@types/content-disposition": "^0.5.3",
     "@types/cors": "^2.8.7",
@@ -88,21 +80,16 @@
     "@types/merge-stream": "^1.1.2",
     "@types/merge2": "^1.3.0",
     "@types/mocha": "^10",
-    "@types/node-fetch": "^2.5.7",
-    "@types/once": "^1.4.0",
+    "@types/node-fetch": "^3.0.3",
+    "@types/once": "^1.4.4",
     "@types/parse-prefer-header": "^1.0.1",
-    "@types/rdf-ext": "^1.3.8",
-    "@types/rdf-js": "^4.0.0",
-    "@types/rdf-transform-triple-to-quad": "^1.0.0",
-    "@types/rdfjs__express-handler": "^1.1.1",
-    "@types/rdfjs__fetch": "^2",
-    "@types/rdfjs__parser-n3": "^1.1.2",
-    "@types/rdfjs__term-map": "^1.0.0",
-    "@types/rdfjs__term-set": "^1.0.2",
+    "@types/rdf-js": "^4.0.2",
+    "@types/rdf-transform-triple-to-quad": "^2.0.5",
+    "@types/rdfjs__express-handler": "^2.0.6",
     "@types/readable-stream": "^2.3.9",
     "@types/set-link": "^1.0.1",
     "@types/sinon": "^10.0.0",
-    "@types/sinon-chai": "^3.2.4",
+    "@types/sinon-chai": "^3.2.12",
     "@types/slug": "^5.0.0",
     "@types/sparql-http-client": "^2",
     "@types/sparqljs": "^3.1.3",
@@ -114,7 +101,7 @@
     "chai-snapshot-matcher": "^2.0.0",
     "mocha": "^10.2.0",
     "rdf-literal": "^1.3.0",
-    "sinon": "^13.0.0",
+    "sinon": "^17.0.1",
     "sinon-chai": "^3.5.0",
     "sparqljs": "^3.5.1",
     "supertest": "^6.3.3"
