--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -7,22 +7,19 @@
     "@cube-creator/core": "1.0.0",
     "@cube-creator/express": "0.0.0",
     "@hydrofoil/labyrinth": "^0.4.2",
-    "@hydrofoil/shape-to-query": "^0.8.1",
-    "@rdfine/hydra": "^0.8.2",
-    "@rdfine/rdfs": "^0.6.4",
-    "@rdfine/schema": "^0.6.3",
-    "@rdfine/shacl": "^0.8",
-    "@rdfjs-elements/formats-pretty": "^0.4.3",
-    "@rdfjs/formats-common": "^2.1.0",
-    "@rdfjs/namespace": "^1.1.0",
-    "@rdfjs/term-map": "^1.0.0",
-    "@rdfjs/term-set": "^1.0.1",
-    "@tpluscode/rdf-ns-builders": "^1.0.0",
-    "@tpluscode/rdf-string": "^0.2.21",
-    "@tpluscode/rdfine": "^0.5.25",
-    "@tpluscode/sparql-builder": "^0.3.21",
+    "@hydrofoil/shape-to-query": "^0.9.4",
+    "@rdfine/hydra": "^0.10.5",
+    "@rdfine/rdfs": "^0.8.5",
+    "@rdfine/schema": "^0.8.5",
+    "@rdfine/shacl": "^0.10.5",
+    "@rdfjs-elements/formats-pretty": "^0.6.7",
+    "@rdfjs/formats": "^4",
+    "@tpluscode/rdf-ns-builders": "^4.3.0",
+    "@tpluscode/rdf-string": "^1.1.3",
+    "@tpluscode/rdfine": "^0.7.7",
+    "@tpluscode/sparql-builder": "^1.1.0",
+    "@zazuko/env": "^2.0.6",
     "camouflage-rewrite": "^1.2.0",
-    "clownface": "^1.4.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
@@ -30,17 +27,13 @@
     "http-errors": "^2.0.0",
     "http-status": "^1.5.0",
     "hydra-box-middleware-shacl": "1.1.0",
-    "is-graph-pointer": "^1.2.2",
+    "is-graph-pointer": "^2.1.0",
     "middleware-async": "^1.2.7",
-    "nanoid": "^3.1.23",
+    "nanoid": "^5.0.6",
     "once": "^1.4.0",
-    "onetime": "^5",
     "parse-prefer-header": "^1.0.0",
-    "rdf-dataset-ext": "^1.0.1",
-    "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
-    "rdf-utils-fs": "^2",
-    "rdf-validate-shacl": "^0.4.3",
+    "rdf-validate-shacl": "^0.5.3",
     "slugify": "^1.6.5",
     "sparql-http-client": "^2.2.2",
     "through2": "^2.0.5"
@@ -48,14 +41,11 @@
   "devDependencies": {
     "@cube-creator/testing": "^0.1.21",
     "@types/camouflage-rewrite": "^1.2.0",
-    "@types/clownface": "^1.2.6",
     "@types/parse-prefer-header": "^1.0.0",
-    "@types/rdf-dataset-ext": "^1",
-    "@types/rdf-utils-fs": "^2",
-    "@types/sinon": "^10.0.0",
+    "@types/sinon": "^17.0.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^10.2.0",
-    "sinon": "^13.0.0"
+    "sinon": "^17.0.1"
   }
 }
