--- a/cli/package.json
+++ b/cli/package.json
@@ -23,34 +23,29 @@
     "@opentelemetry/sdk-node": "^0.35.1",
     "@opentelemetry/semantic-conventions": "^0.26.0",
     "@opentelemetry/tracing": "^0.24.0",
-    "@rdfine/csvw": "^0.6.3",
-    "@rdfine/prov": "^0.1.1",
-    "@rdfine/schema": "^0.6.3",
-    "@rdfine/shacl": "^0.8.6",
-    "@rdfjs/fetch-lite": "^2.0.1",
-    "@rdfjs/namespace": "^1.1.0",
-    "@rdfjs/term-map": "^1.0.0",
-    "@rdfjs/term-set": "^1.0.1",
+    "@rdfine/csvw": "^0.8.5",
+    "@rdfine/prov": "^0.3.5",
+    "@rdfine/schema": "^0.8.5",
+    "@rdfine/shacl": "^0.10.5",
     "@sentry/node": "^6.2.0",
     "@sentry/tracing": "^6.2.0",
-    "@tpluscode/rdf-ns-builders": "^1.0.0",
-    "@tpluscode/rdf-string": "^0.2.24",
-    "@tpluscode/rdfine": "^0.5.19",
-    "@tpluscode/sparql-builder": "^0.3.15",
-    "@zazuko/rdf-vocabularies": ">=2021",
-    "@zazuko/s": "^1.0.0",
-    "@zazuko/shacl-playground": "^1.0.0",
-    "alcaeus": "^2",
+    "@tpluscode/rdf-ns-builders": "^4.3.0",
+    "@tpluscode/rdf-string": "^1.1.3",
+    "@tpluscode/rdfine": "^0.7.7",
+    "@tpluscode/sparql-builder": "^1.1.0",
+    "@zazuko/env": "^2.0.6",
+    "@zazuko/s": "^1.0.1",
+    "@zazuko/shacl-playground": "^2.0.0",
+    "alcaeus": "^3.0.0",
     "aws-sdk": "^2.559.0",
-    "barnard59": "^1.1.0",
-    "barnard59-base": "^1.1.0",
-    "barnard59-formats": "^1.1.0",
-    "barnard59-graph-store": "^1.0.0",
-    "barnard59-http": "^1.1.1",
-    "barnard59-rdf": "^1.0.0",
-    "barnard59-validate-shacl": "^0.3.8",
+    "barnard59": "^4.5.3",
+    "barnard59-base": "^2.4.0",
+    "barnard59-formats": "^2.1.0",
+    "barnard59-graph-store": "^5.1.1",
+    "barnard59-http": "^2.0.0",
+    "barnard59-rdf": "^3.4.0",
+    "barnard59-shacl": "^1.4.2",
     "body-parser": "^1.19.0",
-    "clownface": "^1",
     "commander": "^4.1.1",
     "cors": "^2.8.5",
     "duplex-to": "^1.0.0",
@@ -60,18 +55,16 @@
     "iso8601-duration": "^1.3.0",
     "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
-    "nanoid": "^3.1.20",
-    "nanoid-dictionary": "^4.2.0",
-    "node-fetch": "^2.6.1",
+    "nanoid": "^5.0.6",
+    "nanoid-dictionary": "^4.3.0",
+    "node-fetch": "^3.3.2",
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
-    "rdf-ext": "^1.3.0",
-    "rdf-literal": "^1.3.0",
-    "rdf-parser-csvw": "^0.15",
+    "rdf-literal": "^1.3.2",
+    "rdf-parser-csvw": "^0.15.3",
     "rdf-stream-to-dataset-stream": "^1.0.0",
-    "rdf-utils-fs": "^2.1.0",
-    "rdf-validate-datatype": "^0.1.3",
-    "readable-stream": "^3.6.0",
+    "rdf-validate-datatype": "^0.2.1",
+    "readable-stream": "^4.5.2",
     "sparql-http-client": "^2.4.0",
     "string-to-stream": "^3.0.1",
     "tempy": "^1",
@@ -112,16 +105,16 @@
     "@types/rdfjs__term-map": "^1.0.1",
     "@types/rdfjs__term-set": "^1.0.2",
     "@types/readable-stream": "^2.3.11",
-    "@types/sinon": "^10.0.2",
-    "@types/sinon-chai": "^3.2.4",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
     "@types/sparql-http-client": "^2",
     "@types/through2": "^2.0.36",
     "chai": "^4.3.4",
     "dotenv": "^16.0.0",
     "dotenv-cli": "^5.0.0",
     "mocha": "^10.2.0",
-    "sinon": "^13.0.0",
-    "sinon-chai": "^3.5.0"
+    "sinon": "^17.0.1",
+    "sinon-chai": "^3.7.0"
   },
   "repository": {
     "type": "git",
