--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,21 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@rdf-esm/data-model": "^0.5.4",
-    "@rdf-esm/namespace": "^0.5.2",
-    "@rdfjs/parser-n3": "^1.1.4",
-    "@tpluscode/rdf-ns-builders": "^1.0.0",
-    "@tpluscode/rdf-string": "^0.2.21",
-    "@zazuko/rdf-vocabularies": ">=2021.3.17",
-    "@zazuko/vocabulary-extras": "^1.2.3",
-    "rdf-ext": "^1.3.0",
+    "@rdfjs/parser-n3": "^2.0.2",
+    "@tpluscode/rdf-ns-builders": "^4.3.0",
+    "@tpluscode/rdf-string": "^1.1.3",
+    "@zazuko/prefixes": "^2.2.0",
+    "@zazuko/vocabulary-extras": "^2.0.6",
+    "@zazuko/env": "^2.0.6",
     "sparql-http-client": "^2.2.2",
     "string-to-stream": "^3.0.1"
   },
   "devDependencies": {
-    "@types/rdf-js": "^4.0.0",
-    "@types/rdfjs__namespace": "^1.1.3",
-    "@types/rdfjs__parser-n3": "^1.1.2",
+    "@rdfjs/types": "^1.1.0",
+    "@types/rdfjs__parser-n3": "^2.0.6",
     "@types/sparql-http-client": "^2.2.5"
   }
 }
