--- a/packages/shacl-middleware/package.json
+++ b/packages/shacl-middleware/package.json
@@ -5,23 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "@tpluscode/rdf-ns-builders": "^1.0.0",
-    "clownface": "^1.2.0",
+    "@zazuko/env": "^2.0.6",
     "express": "^4.17.1",
     "http-problem-details": "^0.1.5",
     "hydra-box": "^0.6.2",
     "middleware-async": "^1.2.7",
-    "rdf-ext": "^1.3.0",
-    "rdf-validate-shacl": "^0.4.4"
+    "rdf-validate-shacl": "^0.5.3"
   },
   "peerDependencies": {
     "express-rdf-request": "0.1.0"
   },
   "devDependencies": {
     "@cube-creator/testing": "^0.1.15",
-    "@rdfjs/term-map": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.21",
-    "@types/rdf-js": "^4",
-    "@types/rdf-validate-shacl": "^0.4.0",
     "mocha": "^10",
     "supertest": "^6.0.0"
   }
