--- a/ui/package.json
+++ b/ui/package.json
@@ -19,25 +19,22 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@he-tree/vue3": "^1.2.9",
-    "@hydrofoil/shaperone-core": "^0.11",
+    "@hydrofoil/shaperone-core": "^0.11.0",
     "@hydrofoil/shaperone-hydra": "0.3.16",
     "@hydrofoil/shaperone-wc": "^0.7.13",
     "@hydrofoil/shaperone-wc-shoelace": "^0.3.2",
     "@hydrofoil/shaperone-rdf-validate-shacl": "^1.0.4",
     "@oruga-ui/oruga-next": "^0.5.10",
     "@oruga-ui/theme-bulma": "^0.2.3",
-    "@rdf-esm/data-model": "^0.5.3",
-    "@rdf-esm/dataset": "^0.5.1",
-    "@rdfine/schema": "^0.6.3",
-    "@rdfine/shacl": "^0.8",
-    "@rdfjs-elements/lit-helpers": "^0.3.5",
-    "@rdfjs-elements/rdf-editor": "^0.5",
-    "@rdfjs/term-set": "^1.0.1",
+    "@rdfine/schema": "^0.8.5",
+    "@rdfine/shacl": "^0.10.5",
+    "@rdfjs-elements/lit-helpers": "^0.3.7",
+    "@rdfjs-elements/rdf-editor": "^0.5.7",
     "@sentry/tracing": "^6.2.0",
     "@sentry/vue": "^6.2.0",
     "@tinyhttp/content-disposition": "^2.0.5",
-    "@tpluscode/rdf-ns-builders": "^1.0.0",
-    "@tpluscode/rdfine": "^0.5.19",
+    "@tpluscode/rdf-ns-builders": "^4.3.0",
+    "@tpluscode/rdfine": "^0.7.7",
     "@uppy/aws-s3-multipart": "^3.1.1",
     "@uppy/core": "^3.0.4",
     "@uppy/dashboard": "^3.2.0",
@@ -45,13 +42,12 @@
     "@uppy/progress-bar": "^3.0.1",
     "@uppy/status-bar": "^3.0.1",
     "@uppy/vue": "^1.0.1",
-    "@zazuko/cube-hierarchy-query": "^1.0.2",
-    "@zazuko/rdf-vocabularies": ">=2021.3.17",
-    "alcaeus": "^2.1",
+    "@zazuko/cube-hierarchy-query": "^2.2.1",
+    "@zazuko/env": "^2.0.6",
+    "alcaeus": "^3.0.0",
     "buffer": "^6.0.3",
     "bulma-quickview": "^2.0.0",
-    "clownface": "^1.5.1",
-    "clownface-shacl-path": "^1.0.1",
+    "clownface-shacl-path": "^2.1.0",
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
@@ -74,14 +70,9 @@
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.4.10",
-    "@types/clownface": "^1.5.0",
     "@types/debounce": "^1.2.0",
     "@types/humanize-duration": "^3.27.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/rdf-ext": "^1.3.11",
-    "@types/rdf-js": "^4",
-    "@types/rdfjs__dataset": "^1.0.4",
-    "@types/rdfjs__term-set": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vue/cli-plugin-babel": "^5.0.1",
@@ -94,7 +85,7 @@
     "@vue/compiler-sfc": "^3.1.0",
     "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "@vue/test-utils": "^1.1.0",
+    "@vue/test-utils": "^2.4.4",
     "cypress": "^8.3.0",
     "cypress-file-upload": "^5.0.0",
     "eslint": "^8.0.0",
